Removed triangles, fixed alignment

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,12 +4,7 @@
 :root {
   background-color: $bg;
   color: #666;
-  a {
-    text-decoration: none;
-    background: -webkit-linear-gradient(-60deg, #0000FF, #6699DD);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
+
 }
 
 .header {
@@ -21,6 +16,13 @@
   flex-wrap: wrap;
   box-shadow: 0 -10px 10px $shadow,
               0 -10px 10px inset $light-shadow;
+
+  a {
+    text-decoration: none;
+    background: -webkit-linear-gradient(-60deg, #0000FF, #6699DD);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
   .title {
     padding: 0 1rem;
@@ -62,6 +64,7 @@
 .main {
   padding: 1vw 5vw;
   display: flex;
+  flex-direction: column;
   @keyframes fadeIn {
     0% {opacity:0;}
     100% {opacity:1;}
@@ -105,6 +108,7 @@
                 10px 10px 10px inset $light,
                 10px 10px 10px $shadow,
                 -10px -10px 10px inset $shadow;
+    align-self: center;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -137,10 +141,10 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      box-shadow: -10px -10px 5px $light,
-                  10px 10px 5px inset $light,
-                  10px 10px 5px $shadow,
-                  -10px -10px 5px inset $shadow;
+      box-shadow: -10px -10px 10px $light,
+                  10px 10px 10px inset $light,
+                  10px 10px 10px $shadow,
+                  -10px -10px 10px inset $shadow;
       animation: growOut 2s;
 
       h4 {
@@ -442,6 +446,25 @@
           border-radius: 100%;
         }
       }
+    }
+  }
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #000;
+  nav {
+    display: flex;
+    flex-direction: row;
+
+    a {
+      font-weight: 600;
+      text-decoration: none;
+      color: #DDD;
+      margin-left: 1rem;
+      padding: 0.5rem;
     }
   }
 }
